--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body{
     background-color: rgba(26, 25, 25, 0.966);
 }
 
+img {
+    width: 100%;
+}
+
+a {
+    color: dodgerblue;
+}
+
 ul {
     position: fixed;
     top: 0;
@@ -63,8 +71,13 @@ ul {
   }
 
   .content {
+     background-color: #333;
      color: white;
-     padding-left: 20%;
-     padding-right: 20%;
-     padding-top: 5%;
+     padding: 5%;
+     margin-left: 20%;
+     margin-right: 20%;
+     margin-top: 5%;
   }
+
+
+ 
