--- a/style.css
+++ b/style.css
@@ -1,31 +1,39 @@
 body{
     background-color: rgba(26, 25, 25, 0.966);
-}
-
+  }
+  
 img {
-    width: 60%;
+  width: 60%;
 }
 
 a {
-    color: dodgerblue;
+  color: dodgerblue;
 }
 
 ul {
-    position: fixed;
-    top: 0;
-    Left: 0;
-    width: 100%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: left;
-  }
-  
+  position: fixed;
+  top: 0;
+  Left: 0;
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+div.content ul {
+  position: relative;
+}
+
+#menu li {
+  float: left;
+}
+
+li#contact {
+  float: right;
+}
+
   li a {
     display: block;
     color: white;
@@ -78,10 +86,7 @@ ul {
      margin-right: 20%;
      margin-top: 5%;
   }
-
-  #contact {
-    float: right;
-  }
+  
 
 
  
