--- a/style.css
+++ b/style.css
@@ -86,6 +86,29 @@ li#contact {
      margin-right: 20%;
      margin-top: 5%;
   }
+
+  .content-right {
+    background-color: #333;
+    position: fixed;
+    right: 0;
+    top: 0;
+    margin-top: 5%;
+    height: 85%;
+    max-width: 16%;
+  }
+
+.img-container {
+  margin-top: 5%;
+}
+
+.img-container img {
+  margin-left: 15%;
+  width: 70%;
+}
+
+.img-container img:hover {
+  cursor: pointer;
+}
   
 
 
