--- a/style.css
+++ b/style.css
@@ -55,6 +55,29 @@ li#contact {
     background-color: #111;
   }
 
+  #overlay {
+    position:absolute;
+    top: 10%;
+    background-color: rgba(0,0,0,0.8);
+    margin-left: 20%;
+    width: 60%;
+    height: 70%;
+  }
+
+  #overlay img {
+    margin-left: 5%;
+    margin-top: 4%;
+    width: 90%;
+  }
+
+  .enable {
+    visibility: visible;
+  }
+
+  .disable {
+    visibility: hidden;
+  }
+
   .active {
     background-color: dodgerblue;
   }
@@ -95,6 +118,7 @@ li#contact {
     margin-top: 5%;
     height: 85%;
     max-width: 16%;
+    overflow-y: scroll;
   }
 
 .img-container {
@@ -102,8 +126,8 @@ li#contact {
 }
 
 .img-container img {
-  margin-left: 15%;
-  width: 70%;
+  margin-left: 5%;
+  width: 90%;
 }
 
 .img-container img:hover {
