--- a/style.css
+++ b/style.css
@@ -70,6 +70,15 @@ li#contact {
     width: 90%;
   }
 
+  .scroller {
+    width: 300px;
+    height: 100px;
+    overflow-y: scroll;
+    scrollbar-color: rgb(0, 0, 0) rgb(95, 97, 95);
+    scrollbar-width: thin;
+  }
+  
+
   .enable {
     visibility: visible;
   }
