--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ ul {
   background-color: #333;
 }
 
+button {
+  background-color: dodgerblue;
+  color: white;
+  border-radius: 20px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
 div.content ul {
   position: relative;
 }
@@ -56,10 +66,8 @@ li#contact {
   }
 
   #close-button {
-    top: 0;
-    right: 0;
-    color: aqua;
     font-size: 20px;
+    width: 50px;
   }
 
   #overlay {
@@ -85,7 +93,6 @@ li#contact {
     scrollbar-width: thin;
   }
   
-
   .enable {
     visibility: visible;
   }
