--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ div.content ul {
   float: left;
 }
 
+#overlay img#overlay-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
 li#contact {
   float: right;
 }
@@ -69,7 +76,6 @@ li#contact {
     height: 500px;
     width: 30px;
     position: relative;
-    bottom: 250px;
     font-size: 21px;
   }
 
@@ -77,15 +83,13 @@ li#contact {
     height: 500px;
     width: 30px;
     position: relative;
-    bottom: 250px;
+    ;
     font-size: 21px;
   }
 
   #close-button {
     font-size: 20px;
     width: 50px;
-    position: absolute;
-    right: 0px;
   }
 
   #overlay {
@@ -94,14 +98,35 @@ li#contact {
     background-color: rgba(0, 0, 0, 0.726);
     margin-left: 10%;
     width: 70%;
-    height: 80%;
+    height: auto;
     border-radius: 15px;
+    padding: 20px;
+    color: lightgray;
   }
 
   #overlay img {
     margin-left: 2%;
     margin-top: 4%;
-    width: 90%;
+    width: 100%;
+  }
+
+  .active-image {
+    font-size: 50px
+  }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+  .right {
+    position: absolute;
+    right: 0px;
+    width: 300px;
+    border: 3px solid #73AD21;
+    padding: 10px;
   }
 
   .scroller {
