--- a/style.css
+++ b/style.css
@@ -182,10 +182,10 @@ li a:hover {
   padding: 12px 16px;
   z-index: 1;
 }
-
+/* 
 .dropdown:hover .dropdown-content {
   display: block;
-}
+} */
 
 .Title {
   font-size: 50px;
