--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,16 @@ header nav ul {
   background-color: #333;
 }
 
+/* Change the link color to #111 (black) on hover */
+header nav li a:hover {
+  background-color: rgb(26, 145, 117);
+}
+
+header nav div.dropdown:hover {
+  background-color: rgb(26, 145, 117);
+  cursor: pointer;
+}
+
 button {
   background-color: rgb(234, 113, 0);
   color: rgb(219, 219, 219);
@@ -77,11 +87,6 @@ li div.dropdown {
   text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: rgb(26, 145, 117);
-}
-
 #next {
   margin-top: 50px;
   height: 500px;
@@ -129,6 +134,10 @@ li a:hover {
   width: 100%;
 }
 
+.active {
+  background-color: rgb(234, 113, 0);
+}
+
 .active-image {
   font-size: 50px
 }
@@ -138,6 +147,55 @@ li a:hover {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+.center {
+  text-align: center;
+}
+
+.content {
+  background-color: #333;
+  color: rgb(219, 219, 219);
+  border-radius: 15px;
+  max-width: 900px;
+  padding: 5%;
+  margin: auto;
+  margin-top: 100px;
+}
+
+.content-right {
+  background-color: #333;
+  position: fixed;
+  right: 0;
+  top: 0;
+  border-radius: 15px;
+  margin-top: 5%;
+  height: 85%;
+  width: 300px;
+  overflow-y: scroll;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(219, 219, 219);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.disable {
+  visibility: hidden;
+}
+
+.enable {
+  visibility: visible;
 }
 
 .right {
@@ -156,32 +214,6 @@ li a:hover {
   scrollbar-width: thin;
 }
 
-.enable {
-  visibility: visible;
-}
-
-.disable {
-  visibility: hidden;
-}
-
-.active {
-  background-color: rgb(234, 113, 0);
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: rgb(219, 219, 219);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
-}
 /* 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -194,31 +226,6 @@ li a:hover {
   padding-bottom: 20px;
 }
 
-.center {
-  text-align: center;
-}
-
-.content {
-    background-color: #333;
-    color: rgb(219, 219, 219);
-    border-radius: 15px;
-    max-width: 900px;
-    padding: 5%;
-    margin: auto;
-    margin-top: 100px;
-}
-
-.content-right {
-  background-color: #333;
-  position: fixed;
-  right: 0;
-  top: 0;
-  border-radius: 15px;
-  margin-top: 5%;
-  height: 85%;
-  width: 300px;
-  overflow-y: scroll;
-}
 
 .status-paused {
   color: darkorange;
