--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,12 @@ header nav ul {
   background-color: #333;
 }
 
-header nav li a, header nav li span {
+header nav li a, header nav li div.dropdown {
   transition: transform 0.2s;
 }
 
 /* Change the link color to #111 (black) on hover */
-header nav li a:hover, header nav li span:hover {
+header nav li a:hover, header nav li div.dropdown:hover {
   background-color: rgb(26, 145, 117);
   transform: scale(1.5);
 }
