--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,12 @@ header nav ul {
   background-color: #333;
 }
 
-header nav li a, header nav li div.dropdown {
+header nav li a /*, header nav li div.dropdown*/ { 
   transition: transform 0.2s;
 }
 
 /* Change the link color to #111 (black) on hover */
-header nav li a:hover, header nav li div.dropdown:hover {
+header nav li a:hover/*, header nav li div.dropdown:hover*/ {
   background-color: rgb(26, 145, 117);
   transform: scale(1.5);
 }
@@ -145,6 +145,10 @@ ul#menu li a {
   position: relative;
   font-size: 21px;
   border: none;
+}
+
+#back {
+  width: 75px;
 }
 
 /* ================== CLASSES ==================== */
