--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(44, 45, 44);
-}
+    color: rgb(219, 219, 219);
+  }
   
 img {
   width: 60%;
@@ -149,6 +150,7 @@ ul#menu li a {
 
 #back {
   width: 75px;
+  height: 20px;
 }
 
 /* ================== CLASSES ==================== */
@@ -193,6 +195,58 @@ ul#menu li a {
   width: 300px;
   overflow-y: scroll;
 }
+
+.content-left {
+  background-color: #333;
+  position: fixed;
+  left: 0;
+  top: 0;
+  border-radius: 15px;
+  margin-top: 5%;
+  height: 85%;
+  width: 300px;
+  padding: 0px;
+}
+
+.content-left h3 {
+  text-align: center;
+  color: rgb(234, 113, 0);;
+}
+
+.content-left #project_links a {
+  display: block;
+  color:rgb(219, 219, 219);
+  text-align: center;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.content-left #project_links a:hover {
+  background-color: rgb(26, 145, 117);
+}
+
+/* .content-left ul {
+  list-style: none;
+  padding: 0px;
+  width: 100%;
+}
+
+.content-left ul li {
+  margin: 20px 0px;
+  width: 100%;
+}
+
+.content-left ul li a {
+  color: rgb(219, 219, 219);
+  text-decoration: none;
+  padding: 20px;
+}
+
+.content-left ul li a:hover {
+  color: rgb(219, 219, 219);
+  text-decoration: none;
+  background-color: rgb(26, 145, 117);;
+} */
 
 .img-container {
   margin-top: 5%;
@@ -282,7 +336,7 @@ ul#menu li a {
 }
 
 .project_piece img:hover {
-  transform: scale(2.5);
+  transform: scale(2);
 }
 
 .project_piece div:nth-child(3) {
