--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,17 @@ ul#menu li a {
   height: 20px;
 }
 
+#image_row {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+  padding: 10px;
+}
+
+#image_row img{
+  padding: 10px;
+}
+
 /* ================== CLASSES ==================== */
 
 .active {
