--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: rgb(44, 45, 44);
     color: rgb(219, 219, 219);
-    font: sans serif;
+    font: Sans-serif;
   }
   
 img {
