updated project images and fixed spelling errors

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,10 @@ ul#menu li a {
   text-decoration: none;
 }
 
+h1.Title {
+  text-align: left;
+}
+
 /* ================== ID'S ==================== */
 
 #menu li {
