--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(26, 25, 25);
+    background-color: #212222;
     color: rgb(219, 219, 219);
     font-family: Sans-serif;
   }
@@ -16,19 +16,28 @@ a:visited {
   color: rgb(26, 145, 117);
 }
 
-
+hr {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-radius: 50%;
+  color: rgb(234, 113, 0)
+}
 
 header nav ul {
-  position: fixed;
+  position: absolute;
   border-radius: 50px;
   top: 5%;
   Left: 25%;
   width: 50%;
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0; 
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   overflow: hidden;
-  background-color: #1d1d1d;
+  background-color: rgb(234, 113, 0)
 }
 
 head nav ul li {
@@ -41,7 +50,6 @@ header nav li a /*, header nav li div.dropdown*/ {
 
 /* Change the link color to #111 (black) on hover */
 header nav li a:hover, div.content-left a:hover/*, header nav li div.dropdown:hover*/ {
-  background-color: rgb(26, 145, 117);
   transform: scale(1.5);
 }
 
@@ -49,6 +57,25 @@ header nav div.dropdown:hover {
   background-color: rgb(26, 145, 117);
   cursor: pointer;
 }
+
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 75px;
+  background-color: rgb(64, 64, 66);
+}
+
+footer ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+footer ul li a {
+  color: white;
+}
+
 
 button {
   background-color: rgb(234, 113, 0);
@@ -105,6 +132,16 @@ h1.Title {
 }
 
 /* ================== ID'S ==================== */
+
+#back_to_top {
+  width: 100px;
+}
+
+#back_to_top img {
+  width: 100px;
+  padding-left:300px;
+}
+
 
 #menu li {
   float: left;
@@ -197,7 +234,6 @@ h1.Title {
 }
 
 .content {
-  background-color: #1d1d1d;
   color: rgb(219, 219, 219);
   border-radius: 15px;
   max-width: 900px;
